--- a/index.html
+++ b/index.html
@@ -510,13 +510,13 @@
         <section class="container special">
           <header>
             <h2>Innovative Base of Physics Experiments (IBPE), HUST</h2>
+            <p>
+              During May 2019 - July 2020, I was the
+              <strong>chairperson</strong> of IBPE. I was the first female
+              leader of the platform since its establishment in 2002.
+            </p>
           </header>
           <br />
-          <i
-            >During May 2019 - July 2020, I was the chairperson of IBPE. I was
-            the first and only female leader of the platform since its
-            establishment in 2002.</i
-          >
           <div class="row">
             <article class="col-8 col-12-mobile special">
               <h4>Feymann reading group</h4>
