--- a/index.html
+++ b/index.html
@@ -512,8 +512,8 @@
             <h2>Innovative Base of Physics Experiments (IBPE), HUST</h2>
             <p>
               During May 2019 - July 2020, I was the
-              <strong>chairperson</strong> of IBPE. I was the first female
-              leader of the platform since its establishment in 2002.
+              <strong>chairperson</strong> of IBPE. I was the only female leader
+              of the platform since its establishment in 2002.
             </p>
           </header>
           <br />
