--- a/index.html
+++ b/index.html
@@ -537,7 +537,7 @@
               </p>
               <div class="row gtr-50">
                 <div class="col-4">
-                  <a href="" class="image fit">
+                  <a href="images/IRL V1N1 cover.png" class="image fit">
                     <img src="images/IRL V1N1 cover.png" alt="" />
                   </a>
                 </div>
@@ -562,7 +562,7 @@
               </div>
             </article>
             <article class="col-4 col-12-mobile special">
-              <a href="" class="image fit">
+              <a href="images/IBPE intro.png" class="image fit">
                 <img src="images/IBPE intro.png" alt="" />
               </a>
             </article>
