--- a/index.html
+++ b/index.html
@@ -101,7 +101,8 @@
           <header>
             <h2>👋 Hi, I'm <strong>Chen</strong>,</h2>
             <p>
-              a physics student at <strong>Imperial College London</strong>.
+              a passionate physics student exploring the
+              <strong>quantum world</strong>.
             </p>
           </header>
           <div class="row gtr-200">
