--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 
       <!-- Main -->
       <div id="main" class="wrapper style1">
-        <article class="container special">
+        <section class="container special">
           <header>
             <h2>👋 Hi, I'm <strong>Chen</strong>,</h2>
             <p>
@@ -503,7 +503,7 @@
               </article>
             </div>
           </div>
-        </article>
+        </section>
       </div>
 
       <!-- Leadership -->
