--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
           <ul>
             <li><a href="index.html">Home</a></li>
             <li>
-              <a href="research/index.html">Research</a>
+              <a href="research.html">Research</a>
               <ul>
                 <li>
                   <a href="rydberg-quantum-compilation.html"
