--- a/research.html
+++ b/research.html
@@ -197,7 +197,24 @@
                       Trapped-Ion Quantum Computer
                     </h3>
                   </header>
-                  <p></p>
+                  <p>
+                    The key advantages of trapped-ion quantum computing include
+                    long quantum coherence times, high-precision single-qubit
+                    and two-qubit operations, and high-fidelity operations
+                    between any two qubits within the system. In trapped-ion
+                    quantum computing, single-qubit operations typically involve
+                    transitions between internal energy levels of the ions,
+                    which can be achieved by addressing the target ion with
+                    laser pulses. However, multi-qubit operations rely on the
+                    collective vibrational modes of the ion chain, known as
+                    phonons. Critical parameters such as ion positions, phonon
+                    frequencies, and the strength of ion-phonon interactions are
+                    closely related to the structure of the ion trap chip, the
+                    surrounding environment, and the configuration of the
+                    trapping potential. To achieve high-performance trapped-ion
+                    quantum computing, precise calibration of system parameters
+                    is essential.
+                  </p>
                 </section>
                 <section>
                   <header>
