--- a/research.html
+++ b/research.html
@@ -65,27 +65,15 @@
               <hr class="first" />
               <section>
                 <header>
-                  <h3><a href="#">Accumsan sed penatibus</a></h3>
+                  <h3><a href="#">Research interests</a></h3>
                 </header>
-                <p>
-                  Dolor sed fringilla nibh nulla convallis tique ante proin
-                  sociis accumsan lobortis. Auctor etiam porttitor phasellus
-                  tempus cubilia ultrices tempor sagittis tellus ante diam nec
-                  penatibus dolor cras magna tempus feugiat veroeros.
-                </p>
-                <footer>
-                  <a href="#" class="button">Learn More</a>
-                </footer>
+                <p></p>
               </section>
               <hr />
               <section>
                 <header>
-                  <h3><a href="#">Research</a></h3>
+                  <h3><a href="#">Projects</a></h3>
                 </header>
-                <p>
-                  Tempus cubilia ultrices tempor sagittis. Nisl fermentum
-                  consequat integer interdum.
-                </p>
                 <div class="row gtr-50">
                   <div class="col-4">
                     <a href="#" class="image fit"
@@ -93,11 +81,7 @@
                     /></a>
                   </div>
                   <div class="col-8">
-                    <h4>Nibh sed cubilia</h4>
-                    <p>
-                      Amet nullam fringilla nibh nulla convallis tique ante
-                      proin.
-                    </p>
+                    <h4>Rydberg Quantum Computing and Compilation</h4>
                   </div>
                   <div class="col-4">
                     <a href="#" class="image fit"
@@ -105,11 +89,10 @@
                     /></a>
                   </div>
                   <div class="col-8">
-                    <h4>Proin sed adipiscing</h4>
-                    <p>
-                      Amet nullam fringilla nibh nulla convallis tique ante
-                      proin.
-                    </p>
+                    <h4>
+                      Automated Calibration of Experimental Parameters in
+                      Trapped-Ion Quantum Computer
+                    </h4>
                   </div>
                   <div class="col-4">
                     <a href="#" class="image fit"
@@ -117,47 +100,43 @@
                     /></a>
                   </div>
                   <div class="col-8">
-                    <h4>Lorem feugiat magna</h4>
-                    <p>
-                      Amet nullam fringilla nibh nulla convallis tique ante
-                      proin.
-                    </p>
-                  </div>
-                  <div class="col-4">
-                    <a href="#" class="image fit"
-                      ><img src="images/pic13.jpg" alt=""
-                    /></a>
-                  </div>
-                  <div class="col-8">
-                    <h4>Sed tempus fringilla</h4>
-                    <p>
-                      Amet nullam fringilla nibh nulla convallis tique ante
-                      proin.
-                    </p>
-                  </div>
-                  <div class="col-4">
-                    <a href="#" class="image fit"
-                      ><img src="images/pic14.jpg" alt=""
-                    /></a>
-                  </div>
-                  <div class="col-8">
-                    <h4>Malesuada fermentum</h4>
-                    <p>
-                      Amet nullam fringilla nibh nulla convallis tique ante
-                      proin.
-                    </p>
+                    <h4>
+                      Charge Noise in Semiconductor Spin Qubits for Quantum
+                      Computing
+                    </h4>
                   </div>
                 </div>
-                <footer>
-                  <a href="#" class="button">Magna Adipiscing</a>
-                </footer>
               </section>
             </div>
             <div class="col-8 col-12-mobile imp-mobile" id="content">
               <article id="main">
                 <header>
                   <h2>Research Overview</h2>
+                  <p>
+                    Throughout my research journey, I have worked with various
+                    quantum computing platforms, including trapped ions, Rydberg
+                    atoms, and semiconductors. These experiences have provided
+                    me with a comprehensive perspective on quantum computing as
+                    a multifaceted field, encompassing physical, logical, and
+                    application layers. At the physical level, I am particularly
+                    interested in qubit control and quantum error correction. My
+                    work in quantum compilation has allowed me to explore the
+                    logical layer, deepening my understanding of the
+                    interactions between these levels. I am also eager to
+                    explore applications such as quantum algorithms and quantum
+                    simulations. The awarding of the 2024 Nobel Prize in Physics
+                    to John J. Hopfield and Geoffrey E. Hinton for their
+                    foundational work in machine learning with artificial neural
+                    networks underscores the growing significance of artificial
+                    intelligence in scientific research. I believe that
+                    integrating AI into physics investigations is an emerging
+                    trend, offering the potential to significantly accelerate
+                    discoveries and expand the boundaries of the field.
+                  </p>
                 </header>
+                <a class="image featured"
+                  ><img src="images/quantum-computer-levels.jpeg" alt=""
+                /></a>
                 <section>
                   <header>
                     <h3>
