--- a/research.html
+++ b/research.html
@@ -114,24 +114,32 @@
                   <h2>Research Overview</h2>
                   <p>
                     Throughout my research journey, I have worked with various
-                    quantum computing platforms, including trapped ions, Rydberg
-                    atoms, and semiconductors. These experiences have provided
-                    me with a comprehensive perspective on quantum computing as
-                    a multifaceted field, encompassing physical, logical, and
-                    application layers. At the physical level, I am particularly
-                    interested in qubit control and quantum error correction. My
-                    work in quantum compilation has allowed me to explore the
-                    logical layer, deepening my understanding of the
+                    quantum computing platforms, including
+                    <strong
+                      >trapped ions, Rydberg atoms, and semiconductors</strong
+                    >. These experiences have provided me with a comprehensive
+                    perspective on quantum computing as a multifaceted field,
+                    encompassing
+                    <strong>physical, logical, and application layers</strong>.
+                    At the physical level, I am particularly interested in
+                    <strong>qubit control</strong>. My work in
+                    <strong>quantum compilation</strong> has allowed me to
+                    explore the logical layer, deepening my understanding of the
                     interactions between these levels. I am also eager to
-                    explore applications such as quantum algorithms and quantum
-                    simulations. The awarding of the 2024 Nobel Prize in Physics
-                    to John J. Hopfield and Geoffrey E. Hinton for their
-                    foundational work in machine learning with artificial neural
-                    networks underscores the growing significance of artificial
+                    explore different <strong>quantum algorithms</strong>, and
+                    achieve different applications, such and quantum simulations
+                    and quantum machine learning.
+                  </p>
+                  <p>
+                    The awarding of the 2024 Nobel Prize in Physics to John J.
+                    Hopfield and Geoffrey E. Hinton for their foundational work
+                    in machine learning with artificial neural networks
+                    underscores the growing significance of artificial
                     intelligence in scientific research. I believe that
-                    integrating AI into physics investigations is an emerging
-                    trend, offering the potential to significantly accelerate
-                    discoveries and expand the boundaries of the field.
+                    <strong>integrating AI into physics investigations</strong>
+                    is an emerging trend, offering the potential to
+                    significantly accelerate discoveries and expand the
+                    boundaries of the field.
                   </p>
                 </header>
                 <a class="image featured"
