--- a/research.html
+++ b/research.html
@@ -65,23 +65,20 @@
               <hr class="first" />
               <section>
                 <header>
-                  <h3><a href="#">Research interests</a></h3>
-                </header>
-                <p></p>
-              </section>
-              <hr />
-              <section>
-                <header>
                   <h3><a href="#">Projects</a></h3>
                 </header>
                 <div class="row gtr-50">
                   <div class="col-4">
-                    <a href="#" class="image fit"
+                    <a href="rydberg-quantum-compilation.html" class="image fit"
                       ><img src="images/pic10.jpg" alt=""
                     /></a>
                   </div>
                   <div class="col-8">
-                    <h4>Rydberg Quantum Computing and Compilation</h4>
+                    <h4>
+                      <a href="rydberg-quantum-compilation.html"
+                        >Rydberg Quantum Computing and Compilation</a
+                      >
+                    </h4>
                   </div>
                   <div class="col-4">
                     <a href="#" class="image fit"
@@ -112,6 +109,8 @@
               <article id="main">
                 <header>
                   <h2>Research Overview</h2>
+                </header>
+                <section>
                   <p>
                     Throughout my research journey, I have worked with various
                     quantum computing platforms, including
@@ -130,6 +129,9 @@
                     achieve different applications, such and quantum simulations
                     and quantum machine learning.
                   </p>
+                  <a class="image featured"
+                    ><img src="images/quantum-computer-levels.jpeg" alt=""
+                  /></a>
                   <p>
                     The awarding of the 2024 Nobel Prize in Physics to John J.
                     Hopfield and Geoffrey E. Hinton for their foundational work
@@ -141,10 +143,7 @@
                     significantly accelerate discoveries and expand the
                     boundaries of the field.
                   </p>
-                </header>
-                <a class="image featured"
-                  ><img src="images/quantum-computer-levels.jpeg" alt=""
-                /></a>
+                </section>
                 <section>
                   <header>
                     <h3>
@@ -176,8 +175,7 @@
                     computing systems is a critical and practically significant
                     task.
                   </p>
-                </section>
-                <section>
+
                   <header>
                     <h3>
                       Automated Calibration of Experimental Parameters in
