--- a/research.html
+++ b/research.html
@@ -114,13 +114,14 @@
                   <p>
                     Throughout my research journey, I have worked with various
                     quantum computing platforms, including
-                    <strong
-                      >trapped ions, Rydberg atoms, and semiconductors</strong
-                    >. These experiences have provided me with a comprehensive
-                    perspective on quantum computing as a multifaceted field,
-                    encompassing
-                    <strong>physical, logical, and application layers</strong>.
-                    At the physical level, I am particularly interested in
+                    <strong>trapped ions</strong>,
+                    <strong>Rydberg atoms</strong>, and
+                    <strong>semiconductors</strong>. These experiences have
+                    provided me with a comprehensive perspective on quantum
+                    computing as a multifaceted field, encompassing
+                    <strong>physical</strong>, <strong>logical</strong>, and
+                    <strong>application</strong> layers. At the physical level,
+                    I am particularly interested in
                     <strong>qubit control</strong>. My work in
                     <strong>quantum compilation</strong> has allowed me to
                     explore the logical layer, deepening my understanding of the
@@ -133,9 +134,13 @@
                     ><img src="images/quantum-computer-levels.jpeg" alt=""
                   /></a>
                   <p>
-                    The awarding of the 2024 Nobel Prize in Physics to John J.
-                    Hopfield and Geoffrey E. Hinton for their foundational work
-                    in machine learning with artificial neural networks
+                    The awarding of
+                    <a
+                      href="https://www.nobelprize.org/prizes/physics/2024/summary/"
+                      >the 2024 Nobel Prize in Physics to John J. Hopfield and
+                      Geoffrey E. Hinton for their foundational work in machine
+                      learning with artificial neural networks</a
+                    >
                     underscores the growing significance of artificial
                     intelligence in scientific research. I believe that
                     <strong>integrating AI into physics investigations</strong>
