--- a/research.html
+++ b/research.html
@@ -110,45 +110,40 @@
                 <header>
                   <h2>Research Overview</h2>
                 </header>
-                <section>
-                  <p>
-                    Throughout my research journey, I have worked with various
-                    quantum computing platforms, including
-                    <strong>trapped ions</strong>,
-                    <strong>Rydberg atoms</strong>, and
-                    <strong>semiconductors</strong>. These experiences have
-                    provided me with a comprehensive perspective on quantum
-                    computing as a multifaceted field, encompassing
-                    <strong>physical</strong>, <strong>logical</strong>, and
-                    <strong>application</strong> layers. At the physical level,
-                    I am particularly interested in
-                    <strong>qubit control</strong>. My work in
-                    <strong>quantum compilation</strong> has allowed me to
-                    explore the logical layer, deepening my understanding of the
-                    interactions between these levels. I am also eager to
-                    explore different <strong>quantum algorithms</strong>, and
-                    achieve different applications, such and quantum simulations
-                    and quantum machine learning.
-                  </p>
-                  <a class="image featured"
-                    ><img src="images/quantum-computer-levels.jpeg" alt=""
-                  /></a>
-                  <p>
-                    The awarding of
-                    <a
-                      href="https://www.nobelprize.org/prizes/physics/2024/summary/"
-                      >the 2024 Nobel Prize in Physics to John J. Hopfield and
-                      Geoffrey E. Hinton for their foundational work in machine
-                      learning with artificial neural networks</a
-                    >
-                    underscores the growing significance of artificial
-                    intelligence in scientific research. I believe that
-                    <strong>integrating AI into physics investigations</strong>
-                    is an emerging trend, offering the potential to
-                    significantly accelerate discoveries and expand the
-                    boundaries of the field.
-                  </p>
-                </section>
+                <p>
+                  Throughout my research journey, I have worked with various
+                  quantum computing platforms, including
+                  <strong>trapped ions</strong>, <strong>Rydberg atoms</strong>,
+                  and <strong>semiconductors</strong>. These experiences have
+                  provided me with a comprehensive perspective on quantum
+                  computing as a multifaceted field, encompassing
+                  <strong>physical</strong>, <strong>logical</strong>, and
+                  <strong>application</strong> layers. At the physical level, I
+                  am particularly interested in <strong>qubit control</strong>.
+                  My work in <strong>quantum compilation</strong> has allowed me
+                  to explore the logical layer, deepening my understanding of
+                  the interactions between these levels. I am also eager to
+                  explore different <strong>quantum algorithms</strong>, and
+                  achieve different applications, such and quantum simulations
+                  and quantum machine learning.
+                </p>
+                <a class="image featured"
+                  ><img src="images/quantum-computer-levels.jpeg" alt=""
+                /></a>
+                <p>
+                  The awarding of
+                  <a
+                    href="https://www.nobelprize.org/prizes/physics/2024/summary/"
+                    >the 2024 Nobel Prize in Physics to John J. Hopfield and
+                    Geoffrey E. Hinton for their foundational work in machine
+                    learning with artificial neural networks</a
+                  >
+                  underscores the growing significance of artificial
+                  intelligence in scientific research. I believe that
+                  <strong>integrating AI into physics investigations</strong>
+                  is an emerging trend, offering the potential to significantly
+                  accelerate discoveries and expand the boundaries of the field.
+                </p>
                 <section>
                   <header>
                     <h3>
