--- a/photography.html
+++ b/photography.html
@@ -70,7 +70,7 @@
             <div class="reel">
               <article>
                 <a href="#" class="image featured"
-                  ><img src="images/pic01.jpg" alt=""
+                  ><img src="images/photograph/white_cliff.JPG" alt=""
                 /></a>
                 <header>
                   <h3><a href="#">Pulvinar sagittis congue</a></h3>
@@ -78,7 +78,7 @@
               </article>
               <article>
                 <a href="#" class="image featured"
-                  ><img src="images/pic02.jpg" alt=""
+                  ><img src="images/photograph/switzerland.JPG" alt=""
                 /></a>
                 <header>
                   <h3><a href="#">Fermentum sagittis proin</a></h3>
