--- a/photography.html
+++ b/photography.html
@@ -73,10 +73,10 @@
         <div class="reel">
           <article>
             <a href="#" class="image featured"
-              ><img src="images/pic01.jpg" alt=""
+              ><img src="images/photograph/white_cliff.JPG" alt=""
             /></a>
             <header>
-              <h3><a href="#">Pulvinar sagittis congue</a></h3>
+              <h3><a href="#">White cliff, UK</a></h3>
             </header>
             <p>
               Commodo id natoque malesuada sollicitudin elit suscipit magna.
@@ -85,10 +85,10 @@
 
           <article>
             <a href="#" class="image featured"
-              ><img src="images/pic02.jpg" alt=""
+              ><img src="images/photograph/switzerland.JPG" alt=""
             /></a>
             <header>
-              <h3><a href="#">Fermentum sagittis proin</a></h3>
+              <h3><a href="#">Switzerland</a></h3>
             </header>
             <p>
               Commodo id natoque malesuada sollicitudin elit suscipit magna.
@@ -97,10 +97,10 @@
 
           <article>
             <a href="#" class="image featured"
-              ><img src="images/pic03.jpg" alt=""
+              ><img src="images/photograph/switzerland2.JPG" alt=""
             /></a>
             <header>
-              <h3><a href="#">Sed quis rhoncus placerat</a></h3>
+              <h3><a href="#">Switzerland</a></h3>
             </header>
             <p>
               Commodo id natoque malesuada sollicitudin elit suscipit magna.
