--- a/photography.html
+++ b/photography.html
@@ -72,7 +72,7 @@
       <section class="carousel">
         <div class="reel">
           <article>
-            <a href="#" class="image featured"
+            <a href="#" class="image fit"
               ><img src="images/photograph/white_cliff.JPG" alt=""
             /></a>
             <header>
