--- a/photography.html
+++ b/photography.html
@@ -84,7 +84,7 @@
           </article>
 
           <article>
-            <a href="#" class="image featured"
+            <a href="#" class="image fit"
               ><img src="images/photograph/switzerland.JPG" alt=""
             /></a>
             <header>
