--- a/photography.html
+++ b/photography.html
@@ -72,7 +72,7 @@
       <section class="carousel">
         <div class="reel">
           <article>
-            <a href="#" class="image fit"
+            <a href="#" class="image centered img"
               ><img src="images/photograph/white_cliff.JPG" alt=""
             /></a>
             <header>
@@ -84,7 +84,7 @@
           </article>
 
           <article>
-            <a href="#" class="image fit"
+            <a href="#" class="image centered img"
               ><img src="images/photograph/switzerland.JPG" alt=""
             /></a>
             <header>
@@ -109,7 +109,7 @@
 
           <article>
             <a href="#" class="image featured"
-              ><img src="images/pic04.jpg" alt=""
+              ><img src="images/" alt=""
             /></a>
             <header>
               <h3><a href="#">Ultrices urna sit lobortis</a></h3>
