--- a/photography.html
+++ b/photography.html
@@ -72,7 +72,7 @@
       <section class="carousel">
         <div class="reel">
           <article>
-            <a href="#" class="image centered img"
+            <a href="images/photograph/white_cliff.JPG" class="image featured"
               ><img src="images/photograph/white_cliff.JPG" alt=""
             /></a>
             <header>
@@ -84,7 +84,7 @@
           </article>
 
           <article>
-            <a href="#" class="image centered img"
+            <a href="images/photograph/switzerland.JPG" class="image featured"
               ><img src="images/photograph/switzerland.JPG" alt=""
             /></a>
             <header>
@@ -96,7 +96,7 @@
           </article>
 
           <article>
-            <a href="#" class="image featured"
+            <a href="images/photograph/switzerland2.JPG" class="image featured"
               ><img src="images/photograph/switzerland2.JPG" alt=""
             /></a>
             <header>
@@ -108,11 +108,11 @@
           </article>
 
           <article>
-            <a href="#" class="image featured"
-              ><img src="images/" alt=""
+            <a href="images/photograph/epping_forest.jpg" class="image featured"
+              ><img src="images/photograph/epping_forest.jpg" alt=""
             /></a>
             <header>
-              <h3><a href="#">Ultrices urna sit lobortis</a></h3>
+              <h3><a href="#">Epping forest, UK</a></h3>
             </header>
             <p>
               Commodo id natoque malesuada sollicitudin elit suscipit magna.
