--- a/research.html
+++ b/research.html
@@ -124,7 +124,7 @@
                   to explore the logical layer, deepening my understanding of
                   the interactions between these levels. I am also eager to
                   explore different <strong>quantum algorithms</strong>, and
-                  achieve different applications, such and quantum simulations
+                  achieve different applications, such as quantum simulations
                   and quantum machine learning.
                 </p>
                 <a class="image featured"
