--- a/research.html
+++ b/research.html
@@ -175,7 +175,13 @@
                     computing systems is a critical and practically significant
                     task.
                   </p>
-
+                  <footer>
+                    <a href="rydberg-quantum-compilation.html" class="button"
+                      >Read more</a
+                    >
+                  </footer>
+                </section>
+                <section>
                   <header>
                     <h3>
                       Automated Calibration of Experimental Parameters in
@@ -200,6 +206,9 @@
                     quantum computing, precise calibration of system parameters
                     is essential.
                   </p>
+                  <footer>
+                    <a href="#" class="button">Read more</a>
+                  </footer>
                 </section>
                 <section>
                   <header>
@@ -223,6 +232,9 @@
                     to first study and understand the underlying mechanisms of
                     charge noise.
                   </p>
+                  <footer>
+                    <a href="#" class="button">Read more</a>
+                  </footer>
                 </section>
               </article>
             </div>
