--- a/photography.html
+++ b/photography.html
@@ -72,11 +72,11 @@
       <section class="carousel">
         <div class="reel">
           <article>
-            <a href="images/photograph/white_cliff.JPG" class="image featured"
-              ><img src="images/photograph/white_cliff.JPG" alt=""
+            <a href="images/photograph/switzerland.JPG" class="image featured"
+              ><img src="images/photograph/switzerland.JPG" alt=""
             /></a>
             <header>
-              <h3><a href="#">White cliff, UK</a></h3>
+              <h3><a href="#">Switzerland</a></h3>
             </header>
             <p>
               Commodo id natoque malesuada sollicitudin elit suscipit magna.
@@ -84,11 +84,87 @@
           </article>
 
           <article>
-            <a href="images/photograph/switzerland.JPG" class="image featured"
-              ><img src="images/photograph/switzerland.JPG" alt=""
+            <a href="#" class="image featured"
+              ><img src="images/pic05.jpg" alt=""
             /></a>
             <header>
-              <h3><a href="#">Switzerland</a></h3>
+              <h3><a href="#">Varius magnis sollicitudin</a></h3>
+            </header>
+            <p>
+              Commodo id natoque malesuada sollicitudin elit suscipit magna.
+            </p>
+          </article>
+
+          <article>
+            <a href="#" class="image featured"
+              ><img src="images/pic01.jpg" alt=""
+            /></a>
+            <header>
+              <h3><a href="#">Pulvinar sagittis congue</a></h3>
+            </header>
+            <p>
+              Commodo id natoque malesuada sollicitudin elit suscipit magna.
+            </p>
+          </article>
+
+          <article>
+            <a href="#" class="image featured"
+              ><img src="images/pic02.jpg" alt=""
+            /></a>
+            <header>
+              <h3><a href="#">Fermentum sagittis proin</a></h3>
+            </header>
+            <p>
+              Commodo id natoque malesuada sollicitudin elit suscipit magna.
+            </p>
+          </article>
+
+          <article>
+            <a href="#" class="image featured"
+              ><img src="images/pic03.jpg" alt=""
+            /></a>
+            <header>
+              <h3><a href="#">Sed quis rhoncus placerat</a></h3>
+            </header>
+            <p>
+              Commodo id natoque malesuada sollicitudin elit suscipit magna.
+            </p>
+          </article>
+
+          <article>
+            <a href="#" class="image featured"
+              ><img src="images/pic04.jpg" alt=""
+            /></a>
+            <header>
+              <h3><a href="#">Ultrices urna sit lobortis</a></h3>
+            </header>
+            <p>
+              Commodo id natoque malesuada sollicitudin elit suscipit magna.
+            </p>
+          </article>
+
+          <article>
+            <a href="#" class="image featured"
+              ><img src="images/pic05.jpg" alt=""
+            /></a>
+            <header>
+              <h3><a href="#">Varius magnis sollicitudin</a></h3>
+            </header>
+            <p>
+              Commodo id natoque malesuada sollicitudin elit suscipit magna.
+            </p>
+          </article>
+        </div>
+      </section>
+      <!-- Carousel -->
+      <section class="carousel">
+        <div class="reel">
+          <article>
+            <a href="images/photograph/white_cliff.JPG" class="image featured"
+              ><img src="images/photograph/white_cliff.JPG" alt=""
+            /></a>
+            <header>
+              <h3><a href="#">White cliff, UK</a></h3>
             </header>
             <p>
               Commodo id natoque malesuada sollicitudin elit suscipit magna.
