--- a/photography.html
+++ b/photography.html
@@ -37,12 +37,14 @@
               <a href="research.html">Research</a>
               <ul>
                 <li>
-                  <a href="rydberg-quantum-compilation.html"
-                    >Rydberg quantum compilation</a
+                  <a href="quantum-compilation-with-rydberg-atoms.html"
+                    >Quantum Compilation with Rydberg Atoms</a
                   >
                 </li>
-                <li><a href="#">Trapped-ion quantum computing</a></li>
-                <li><a href="#">Charge noise in semiconductor qubits</a></li>
+                <li><a href="#">Calibration of Trapped-Ion Systems</a></li>
+                <li>
+                  <a href="#">Charge Noise in Semiconductor Spin Qubits</a>
+                </li>
               </ul>
             </li>
             <li><a href="publications.html">Publications</a></li>
