--- a/research.html
+++ b/research.html
@@ -37,12 +37,14 @@
               <a href="research.html">Research</a>
               <ul>
                 <li>
-                  <a href="rydberg-quantum-compilation.html"
-                    >Rydberg quantum compilation</a
+                  <a href="quantum-compilation-with-rydberg-atoms.html"
+                    >Quantum Compilation with Rydberg Atoms</a
                   >
                 </li>
-                <li><a href="#">Trapped-ion quantum computing</a></li>
-                <li><a href="#">Charge noise in semiconductor qubits</a></li>
+                <li><a href="#">Calibration of Trapped-Ion Systems</a></li>
+                <li>
+                  <a href="#">Charge Noise in Semiconductor Spin Qubits</a>
+                </li>
               </ul>
             </li>
             <li><a href="publications.html">Publications</a></li>
@@ -69,13 +71,15 @@
                 </header>
                 <div class="row gtr-50">
                   <div class="col-4">
-                    <a href="rydberg-quantum-compilation.html" class="image fit"
+                    <a
+                      href="quantum-compilation-with-rydberg-atoms.html"
+                      class="image fit"
                       ><img src="images/pic10.jpg" alt=""
                     /></a>
                   </div>
                   <div class="col-8">
                     <h4>
-                      <a href="rydberg-quantum-compilation.html"
+                      <a href="quantum-compilation-with-rydberg-atoms.html"
                         >Rydberg Quantum Computing and Compilation</a
                       >
                     </h4>
@@ -147,8 +151,8 @@
                 <section>
                   <header>
                     <h3>
-                      <a href="rydberg-quantum-compilation.html"
-                        >Rydberg Quantum Computing and Compilation</a
+                      <a href="quantum-compilation-with-rydberg-atoms.html"
+                        >Quantum Compilation with Rydberg Atoms</a
                       >
                     </h3>
                   </header>
@@ -176,7 +180,9 @@
                     task.
                   </p>
                   <footer>
-                    <a href="rydberg-quantum-compilation.html" class="button"
+                    <a
+                      href="quantum-compilation-with-rydberg-atoms.html"
+                      class="button"
                       >Read more</a
                     >
                   </footer>
@@ -189,22 +195,22 @@
                     </h3>
                   </header>
                   <p>
-                    The key advantages of trapped-ion quantum computing include
-                    long quantum coherence times, high-precision single-qubit
-                    and two-qubit operations, and high-fidelity operations
-                    between any two qubits within the system. In trapped-ion
-                    quantum computing, single-qubit operations typically involve
-                    transitions between internal energy levels of the ions,
-                    which can be achieved by addressing the target ion with
-                    laser pulses. However, multi-qubit operations rely on the
-                    collective vibrational modes of the ion chain, known as
-                    phonons. Critical parameters such as ion positions, phonon
-                    frequencies, and the strength of ion-phonon interactions are
-                    closely related to the structure of the ion trap chip, the
-                    surrounding environment, and the configuration of the
-                    trapping potential. To achieve high-performance trapped-ion
-                    quantum computing, precise calibration of system parameters
-                    is essential.
+                    The key advantages of Calibration of Trapped-Ion Systems
+                    include long quantum coherence times, high-precision
+                    single-qubit and two-qubit operations, and high-fidelity
+                    operations between any two qubits within the system. In
+                    trapped-ion quantum computing, single-qubit operations
+                    typically involve transitions between internal energy levels
+                    of the ions, which can be achieved by addressing the target
+                    ion with laser pulses. However, multi-qubit operations rely
+                    on the collective vibrational modes of the ion chain, known
+                    as phonons. Critical parameters such as ion positions,
+                    phonon frequencies, and the strength of ion-phonon
+                    interactions are closely related to the structure of the ion
+                    trap chip, the surrounding environment, and the
+                    configuration of the trapping potential. To achieve
+                    high-performance trapped-ion quantum computing, precise
+                    calibration of system parameters is essential.
                   </p>
                   <footer>
                     <a href="#" class="button">Read more</a>
