--- a/notes.html
+++ b/notes.html
@@ -34,7 +34,7 @@
           <ul>
             <li><a href="index.html">Home</a></li>
             <li>
-              <a href="#">Research</a>
+              <a href="research.html">Research</a>
               <ul>
                 <li>
                   <a href="quantum-compilation-with-rydberg-atoms.html"
