--- a/research.html
+++ b/research.html
@@ -80,7 +80,7 @@
                   <div class="col-8">
                     <h4>
                       <a href="quantum-compilation-with-rydberg-atoms.html"
-                        >Rydberg Quantum Computing and Compilation</a
+                        >Quantum Compilation with Rydberg Atoms</a
                       >
                     </h4>
                   </div>
