--- a/photography.html
+++ b/photography.html
@@ -77,7 +77,7 @@
               <h3><a href="#">Switzerland</a></h3>
             </header>
             <p>
-              Commodo id natoque malesuada sollicitudin elit suscipit magna.
+              June 2024
             </p>
           </article>
 
@@ -162,10 +162,10 @@
               ><img src="images/photograph/white_cliff.JPG" alt=""
             /></a>
             <header>
-              <h3><a href="#">White cliff, UK</a></h3>
+              <h3><a href="#">White Cliff, UK</a></h3>
             </header>
             <p>
-              Commodo id natoque malesuada sollicitudin elit suscipit magna.
+              June 2024
             </p>
           </article>
 
@@ -177,7 +177,7 @@
               <h3><a href="#">Switzerland</a></h3>
             </header>
             <p>
-              Commodo id natoque malesuada sollicitudin elit suscipit magna.
+              June 2024
             </p>
           </article>
 
@@ -189,7 +189,7 @@
               <h3><a href="#">Epping forest, UK</a></h3>
             </header>
             <p>
-              Commodo id natoque malesuada sollicitudin elit suscipit magna.
+              October 2024
             </p>
           </article>
 
@@ -211,42 +211,6 @@
             /></a>
             <header>
               <h3><a href="#">Pulvinar sagittis congue</a></h3>
-            </header>
-            <p>
-              Commodo id natoque malesuada sollicitudin elit suscipit magna.
-            </p>
-          </article>
-
-          <article>
-            <a href="#" class="image featured"
-              ><img src="images/pic02.jpg" alt=""
-            /></a>
-            <header>
-              <h3><a href="#">Fermentum sagittis proin</a></h3>
-            </header>
-            <p>
-              Commodo id natoque malesuada sollicitudin elit suscipit magna.
-            </p>
-          </article>
-
-          <article>
-            <a href="#" class="image featured"
-              ><img src="images/pic03.jpg" alt=""
-            /></a>
-            <header>
-              <h3><a href="#">Sed quis rhoncus placerat</a></h3>
-            </header>
-            <p>
-              Commodo id natoque malesuada sollicitudin elit suscipit magna.
-            </p>
-          </article>
-
-          <article>
-            <a href="#" class="image featured"
-              ><img src="images/pic04.jpg" alt=""
-            /></a>
-            <header>
-              <h3><a href="#">Ultrices urna sit lobortis</a></h3>
             </header>
             <p>
               Commodo id natoque malesuada sollicitudin elit suscipit magna.
