--- a/photography.html
+++ b/photography.html
@@ -34,25 +34,29 @@
           <ul>
             <li><a href="index.html">Home</a></li>
             <li>
-            <a href="research.html">Research</a>
-            <ul>
-              <li>
-              <a href="quantum-compilation-with-rydberg-atoms.html"
-                >Quantum Compilation with Rydberg Atoms</a
-              >
-              </li>
-              <li><a href="#">Calibration of Trapped-Ion Systems</a></li>
-              <li><a href="#">Charge Noise in Semiconductor Spin Qubits</a></li>
-            </ul>
+              <a href="research.html">Research</a>
+              <ul>
+                <li>
+                  <a href="quantum-compilation-with-rydberg-atoms.html"
+                    >Quantum Compilation with Rydberg Atoms</a
+                  >
+                </li>
+                <li><a href="#">Calibration of Trapped-Ion Systems</a></li>
+                <li>
+                  <a href="#">Charge Noise in Semiconductor Spin Qubits</a>
+                </li>
+              </ul>
             </li>
             <li><a href="publications.html">Publications</a></li>
             <li><a href="notes.html">Notes</a></li>
-            <li><a href="#">Life</a>
-            <ul>
-            <li><a href="photography.html">Photography</a></li>
+            <li>
+              <a href="#">Life</a>
+              <ul>
+                <li><a href="photography.html">Photography</a></li>
+              </ul>
             </li>
           </ul>
-          </nav>
+        </nav>
       </div>
 
       <!-- Main -->
@@ -76,21 +80,27 @@
             <header>
               <h3><a href="#">Switzerland</a></h3>
             </header>
-            <p>
-              June 2024
-            </p>
+            <p>June 2024</p>
           </article>
 
           <article>
             <a href="#" class="image featured"
-              ><img src="images/pic05.jpg" alt=""
+              ><img src="images/photograph/morocco.JPG" alt=""
             /></a>
             <header>
-              <h3><a href="#">Varius magnis sollicitudin</a></h3>
+              <h3><a href="#">Tangier, Morocco</a></h3>
             </header>
-            <p>
-              Commodo id natoque malesuada sollicitudin elit suscipit magna.
-            </p>
+            <p>December 2023</p>
+          </article>
+
+          <article>
+            <a href="#" class="image featured"
+              ><img src="images/photograph/morocco2.JPG" alt=""
+            /></a>
+            <header>
+              <h3><a href="#">Chefchaouen, Morocco</a></h3>
+            </header>
+            <p>December 2023</p>
           </article>
 
           <article>
@@ -164,9 +174,7 @@
             <header>
               <h3><a href="#">White Cliff, UK</a></h3>
             </header>
-            <p>
-              June 2024
-            </p>
+            <p>June 2024</p>
           </article>
 
           <article>
@@ -176,9 +184,7 @@
             <header>
               <h3><a href="#">Switzerland</a></h3>
             </header>
-            <p>
-              June 2024
-            </p>
+            <p>June 2024</p>
           </article>
 
           <article>
@@ -188,9 +194,7 @@
             <header>
               <h3><a href="#">Epping forest, UK</a></h3>
             </header>
-            <p>
-              October 2024
-            </p>
+            <p>October 2024</p>
           </article>
 
           <article>
