--- a/index.html
+++ b/index.html
@@ -72,25 +72,29 @@
           <ul>
             <li><a href="index.html">Home</a></li>
             <li>
-            <a href="research.html">Research</a>
-            <ul>
-              <li>
-              <a href="quantum-compilation-with-rydberg-atoms.html"
-                >Quantum Compilation with Rydberg Atoms</a
-              >
-              </li>
-              <li><a href="#">Calibration of Trapped-Ion Systems</a></li>
-              <li><a href="#">Charge Noise in Semiconductor Spin Qubits</a></li>
-            </ul>
+              <a href="research.html">Research</a>
+              <ul>
+                <li>
+                  <a href="quantum-compilation-with-rydberg-atoms.html"
+                    >Quantum Compilation with Rydberg Atoms</a
+                  >
+                </li>
+                <li><a href="#">Calibration of Trapped-Ion Systems</a></li>
+                <li>
+                  <a href="#">Charge Noise in Semiconductor Spin Qubits</a>
+                </li>
+              </ul>
             </li>
             <li><a href="publications.html">Publications</a></li>
             <li><a href="notes.html">Notes</a></li>
-            <li><a href="#">Life</a>
-            <ul>
-            <li><a href="photography.html">Photography</a></li>
+            <li>
+              <a href="#">Life</a>
+              <ul>
+                <li><a href="photography.html">Photography</a></li>
+              </ul>
             </li>
           </ul>
-          </nav>
+        </nav>
       </div>
 
       <!-- Main -->
