--- a/publications.html
+++ b/publications.html
@@ -8,7 +8,7 @@
   <head>
     <title>Chen's Physics World</title>
     <meta charset="utf-8" />
-	<link rel="icon" href="images/icon.png" type="image/png" />
+    <link rel="icon" href="images/icon.png" type="image/png" />
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1, user-scalable=no"
@@ -31,29 +31,33 @@
 
         <!-- Nav -->
         <nav id="nav">
-			<ul>
-			  <li><a href="index.html">Home</a></li>
-			  <li>
-				<a href="research.html">Research</a>
-				<ul>
-				  <li>
-					<a href="quantum-compilation-with-rydberg-atoms.html"
-					  >Quantum Compilation with Rydberg Atoms</a
-					>
-				  </li>
-				  <li><a href="#">Calibration of Trapped-Ion Systems</a></li>
-				  <li><a href="#">Charge Noise in Semiconductor Spin Qubits</a></li>
-				</ul>
-			  </li>
-			  <li><a href="publications.html">Publications</a></li>
-			  <li><a href="notes.html">Notes</a></li>
-			  <li><a href="#">Life</a>
-			  <ul>
-				<li><a href="photography.html">Photography</a></li>
-			  </li>
-			</ul>
-		  </nav>
-		</div>
+          <ul>
+            <li><a href="index.html">Home</a></li>
+            <li>
+              <a href="research.html">Research</a>
+              <ul>
+                <li>
+                  <a href="quantum-compilation-with-rydberg-atoms.html"
+                    >Quantum Compilation with Rydberg Atoms</a
+                  >
+                </li>
+                <li><a href="#">Calibration of Trapped-Ion Systems</a></li>
+                <li>
+                  <a href="#">Charge Noise in Semiconductor Spin Qubits</a>
+                </li>
+              </ul>
+            </li>
+            <li><a href="publications.html">Publications</a></li>
+            <li><a href="notes.html">Notes</a></li>
+            <li>
+              <a href="#">Life</a>
+              <ul>
+                <li><a href="photography.html">Photography</a></li>
+              </ul>
+            </li>
+          </ul>
+        </nav>
+      </div>
 
       <!-- Main -->
       <div class="wrapper style1">
