--- a/photography.html
+++ b/photography.html
@@ -78,7 +78,7 @@
               ><img src="images/photograph/switzerland.JPG" alt=""
             /></a>
             <header>
-              <h3><a href="#">Switzerland</a></h3>
+              <h3><a href="#">Lungern, Switzerland</a></h3>
             </header>
             <p>June 2024</p>
           </article>
@@ -182,7 +182,7 @@
               ><img src="images/photograph/switzerland2.JPG" alt=""
             /></a>
             <header>
-              <h3><a href="#">Switzerland</a></h3>
+              <h3><a href="#">Lungern, Switzerland</a></h3>
             </header>
             <p>June 2024</p>
           </article>
@@ -192,7 +192,7 @@
               ><img src="images/photograph/epping_forest.jpg" alt=""
             /></a>
             <header>
-              <h3><a href="#">Epping forest, UK</a></h3>
+              <h3><a href="#">Epping Forest, UK</a></h3>
             </header>
             <p>October 2024</p>
           </article>
