--- a/photography.html
+++ b/photography.html
@@ -74,8 +74,10 @@
       <section class="carousel">
         <div class="reel">
           <article>
-            <a href="images/photograph/switzerland.JPG" class="image featured"
-              ><img src="images/photograph/switzerland.JPG" alt=""
+            <a
+              href="images/photograph/full/switzerland.JPG"
+              class="image featured"
+              ><img src="images/photograph/small/switzerland.jpeg" alt=""
             /></a>
             <header>
               <h3><a href="#">Lungern, Switzerland</a></h3>
@@ -85,7 +87,7 @@
 
           <article>
             <a href="#" class="image featured"
-              ><img src="images/photograph/morocco.JPG" alt=""
+              ><img src="images/photograph/small/morocco.JPG" alt=""
             /></a>
             <header>
               <h3><a href="#">Tangier, Morocco</a></h3>
@@ -94,8 +96,8 @@
           </article>
 
           <article>
-            <a href="#" class="image featured"
-              ><img src="images/photograph/morocco2.JPG" alt=""
+            <a href="images/photograph/full/morocco2.JPG" class="image featured"
+              ><img src="images/photograph/small/morocco2.JPG" alt=""
             /></a>
             <header>
               <h3><a href="#">Chefchaouen, Morocco</a></h3>
@@ -168,8 +170,10 @@
       <section class="carousel">
         <div class="reel">
           <article>
-            <a href="images/photograph/white_cliff.JPG" class="image featured"
-              ><img src="images/photograph/white_cliff.JPG" alt=""
+            <a
+              href="images/photograph/full/white_cliff.JPG"
+              class="image featured"
+              ><img src="images/photograph/small/white_cliff.JPG" alt=""
             /></a>
             <header>
               <h3><a href="#">White Cliff, UK</a></h3>
@@ -178,8 +182,10 @@
           </article>
 
           <article>
-            <a href="images/photograph/switzerland2.JPG" class="image featured"
-              ><img src="images/photograph/switzerland2.JPG" alt=""
+            <a
+              href="images/photograph/full/switzerland2.JPG"
+              class="image featured"
+              ><img src="images/photograph/small/switzerland2.JPG" alt=""
             /></a>
             <header>
               <h3><a href="#">Lungern, Switzerland</a></h3>
@@ -188,8 +194,10 @@
           </article>
 
           <article>
-            <a href="images/photograph/epping_forest.jpg" class="image featured"
-              ><img src="images/photograph/epping_forest.jpg" alt=""
+            <a
+              href="images/photograph/full/epping_forest.jpg"
+              class="image featured"
+              ><img src="images/photograph/small/epping_forest.jpg" alt=""
             /></a>
             <header>
               <h3><a href="#">Epping Forest, UK</a></h3>
