--- a/photography.html
+++ b/photography.html
@@ -86,8 +86,8 @@
           </article>
 
           <article>
-            <a href="#" class="image featured"
-              ><img src="images/photograph/small/morocco.JPG" alt=""
+            <a href="images/photograph/full/morocco.JPG" class="image featured"
+              ><img src="images/photograph/small/morocco.jpeg" alt=""
             /></a>
             <header>
               <h3><a href="#">Tangier, Morocco</a></h3>
@@ -97,7 +97,7 @@
 
           <article>
             <a href="images/photograph/full/morocco2.JPG" class="image featured"
-              ><img src="images/photograph/small/morocco2.JPG" alt=""
+              ><img src="images/photograph/small/morocco2.jpeg" alt=""
             /></a>
             <header>
               <h3><a href="#">Chefchaouen, Morocco</a></h3>
@@ -166,6 +166,7 @@
           </article>
         </div>
       </section>
+
       <!-- Carousel -->
       <section class="carousel">
         <div class="reel">
@@ -173,7 +174,7 @@
             <a
               href="images/photograph/full/white_cliff.JPG"
               class="image featured"
-              ><img src="images/photograph/small/white_cliff.JPG" alt=""
+              ><img src="images/photograph/small/white_cliff.jpeg" alt=""
             /></a>
             <header>
               <h3><a href="#">White Cliff, UK</a></h3>
@@ -185,7 +186,7 @@
             <a
               href="images/photograph/full/switzerland2.JPG"
               class="image featured"
-              ><img src="images/photograph/small/switzerland2.JPG" alt=""
+              ><img src="images/photograph/small/switzerland2.jpeg" alt=""
             /></a>
             <header>
               <h3><a href="#">Lungern, Switzerland</a></h3>
@@ -197,7 +198,7 @@
             <a
               href="images/photograph/full/epping_forest.jpg"
               class="image featured"
-              ><img src="images/photograph/small/epping_forest.jpg" alt=""
+              ><img src="images/photograph/small/epping_forest.jpeg" alt=""
             /></a>
             <header>
               <h3><a href="#">Epping Forest, UK</a></h3>
