--- a/research.html
+++ b/research.html
@@ -116,7 +116,7 @@
                 </header>
                 <p>
                   Throughout my research journey, I have worked with various
-                  quantum computing platforms, including
+                  <strong>quantum computing</strong> platforms, including
                   <strong>trapped ions</strong>, <strong>Rydberg atoms</strong>,
                   and <strong>semiconductors</strong>. These experiences have
                   provided me with a comprehensive perspective on quantum
