--- a/research.html
+++ b/research.html
@@ -74,7 +74,7 @@
                     <a
                       href="quantum-compilation-with-rydberg-atoms.html"
                       class="image fit"
-                      ><img src="images/pic10.jpg" alt=""
+                      ><img src="images/rydberg.png" alt=""
                     /></a>
                   </div>
                   <div class="col-8">
