--- a/research.html
+++ b/research.html
@@ -67,7 +67,10 @@
               <hr class="first" />
               <section>
                 <header>
-                  <h3><a href="#">Projects</a></h3>
+                  <h3><a href="research.html">Overview</a></h3>
+                </header>
+                <header>
+                  <h3>Projects</h3>
                 </header>
                 <div class="row gtr-50">
                   <div class="col-4">
@@ -148,6 +151,7 @@
                   is an emerging trend, offering the potential to significantly
                   accelerate discoveries and expand the boundaries of the field.
                 </p>
+                <hr />
                 <section>
                   <header>
                     <h3>
