--- a/research.html
+++ b/research.html
@@ -89,7 +89,7 @@
                   </div>
                   <div class="col-4">
                     <a href="#" class="image fit"
-                      ><img src="images/pic11.jpg" alt=""
+                      ><img src="images/trapped-ion.png" alt=""
                     /></a>
                   </div>
                   <div class="col-8">
