--- a/research.html
+++ b/research.html
@@ -77,7 +77,7 @@
                     <a
                       href="quantum-compilation-with-rydberg-atoms.html"
                       class="image fit"
-                      ><img src="images/rydberg.png" alt=""
+                      ><img src="images/rydberg.jpeg" alt=""
                     /></a>
                   </div>
                   <div class="col-8">
@@ -89,7 +89,7 @@
                   </div>
                   <div class="col-4">
                     <a href="#" class="image fit"
-                      ><img src="images/trapped-ion.png" alt=""
+                      ><img src="images/trapped-ion.jpeg" alt=""
                     /></a>
                   </div>
                   <div class="col-8">
