--- a/index.html
+++ b/index.html
@@ -566,7 +566,7 @@
             </article>
             <article class="col-4 col-12-mobile special">
               <a href="images/IBPE intro.jpeg" class="image fit">
-                <img src="images/IBPE intro.jpeg" alt="" />
+                <img src="images/IBPE intro small.jpeg.jpeg" alt="" />
               </a>
             </article>
           </div>
