--- a/research.html
+++ b/research.html
@@ -67,10 +67,14 @@
               <hr class="first" />
               <section>
                 <header>
-                  <h3><a href="research.html">Overview</a></h3>
+                  <h3>
+                    <a href="research.html#overview">Research Overview</a>
+                  </h3>
                 </header>
                 <header>
-                  <h3>Projects</h3>
+                  <h3>
+                    <a href="research.html#projects">Projects overview</a>
+                  </h3>
                 </header>
                 <div class="row gtr-50">
                   <div class="col-4">
@@ -113,7 +117,7 @@
               </section>
             </div>
             <div class="col-8 col-12-mobile imp-mobile" id="content">
-              <article id="main">
+              <article id="Overview">
                 <header>
                   <h2>Research Overview</h2>
                 </header>
@@ -151,7 +155,11 @@
                   is an emerging trend, offering the potential to significantly
                   accelerate discoveries and expand the boundaries of the field.
                 </p>
-                <hr />
+              </article>
+              <article id="Projects">
+                <header>
+                  <h2>Projects Overview</h2>
+                </header>
                 <section>
                   <header>
                     <h3>
