--- a/index.html
+++ b/index.html
@@ -565,8 +565,8 @@
               </div>
             </article>
             <article class="col-4 col-12-mobile special">
-              <a href="images/IBPE intro.jpeg" class="image fit">
-                <img src="images/IBPE intro small.jpeg.jpeg" alt="" />
+              <a href="images/IBPE-intro.jpeg" class="image fit">
+                <img src="images/IBPE-intro-small.jpeg.jpeg" alt="" />
               </a>
             </article>
           </div>
